--- a/Tpl/Home/Default/User/Register.html
+++ b/Tpl/Home/Default/User/Register.html
@@ -10,20 +10,20 @@
                             <dd>
                                 <div class="form-tt"><i class="text-required">*</i>用户名：</div>
                                 <div class="form-row" style="z-index:99">
-                                    <input class="s-txt-focus tips" name="user" autocomplete="off" type="text" value="" title="3-20位字符，可由中文、英文、数字及“_”、“-”组成" validate="{ required:true,maxlength:30,messages:{required:'用户名不能为空'}}"/>
+                                    <input class="s-txt-focus tips" name="m_name" autocomplete="off" type="text" value="" title="3-20位字符，可由中文、英文、数字及“_”、“-”组成" validate='{ required:true,username:true,remote:"{:U("User/checkName","field=m_name")}",maxlength:30,messages:{required:"用户名不能为空"}}'/>
                                 </div>
                             </dd>
                             <dd>
                                 <div class="form-tt"><i class="text-required">*</i>邮箱：</div>
                                 <div class="form-row" style="z-index:99">
-                                    <input class="s-txt-focus tips" name="email" autocomplete="off" type="text" value="" title="请输入常用的邮箱，将用来找回密码、订单通知等"/>
+                                    <input class="s-txt-focus tips" name="m_email" autocomplete="off" type="text" value="" title="请输入常用的邮箱，将用来找回密码、订单通知等" validate='{ required:true,email:true,remote:"{:U("User/checkName","field=m_email")}",maxlength:30,messages:{required:"邮箱不能为空",email:"请填写有效的邮箱"}}'/>
                                 </div>
                             </dd>
                             <dd>
                                 <div class="form-tt"><i class="text-required">*</i>昵称：</div>
                                 <div class="form-row">
                                     <div style="overflow:hidden;*zoom:1">
-                                        <input name="uname" autocomplete="off" type="text" value="" class="s-txt-focus tips" title="3-20位字符，可由中文、英文、数字及“_”、“-”组成"/>
+                                        <input name="m_nickname" autocomplete="off" type="text" value="" class="s-txt-focus tips" title="3-20位字符，可由中文、英文、数字及“_”、“-”组成" validate='{ required:true,messages:{required:"昵称不能为空"}}'/>
                                     </div>
                                 </div>
                             </dd>
@@ -31,29 +31,29 @@
                                 <div class="form-tt"><i class="text-required">*</i>登录密码：</div>
                                 <div class="form-row psd">
                                     <div style="overflow:hidden;*zoom:1">
-                                        <input name="password" type="password" value="" class="s-txt-focus tips" title="6-16位字符，可由英文、数字及标点符号组成"/>
+                                        <input name="m_passwd" type="password" value="" id="m_passwd" class="s-txt-focus tips" title="6-16位字符，可由英文、数字及标点符号组成" validate='{ required:true,messages:{required:"登录密码不能为空"}}'/>
                                     </div>
                                 </div>
                             </dd>
                             <dd>
                                 <div class="form-tt"><i class="text-required">*</i>确认密码：</div>
                                 <div class="form-row">
-                                    <input name="repassword" type="password" class="s-txt-focus tips" title="请再次输入您的密码"/>
+                                    <input name="repassword" type="password" class="s-txt-focus tips" title="请再次输入您的密码" validate='{ required:true,equalTo:"#m_passwd",messages:{required:"确认密码不能为空",equalTo:"两次密码输入不相同"}}'/>
                                 </div>
                             </dd>
                             <dd>
                                 <div class="form-tt"><i class="text-required">*</i>性别：</div>
                                 <div class="form-row">
-                                    <label><input name="sex" type="radio" class="s-radio" value="1" checked="checked"/>男</label>
-                                    <label><input event-node="radio" type="radio" name="sex" value="2" class="s-radio"  />女</label>
-                                    <label><input name="sex" type="radio" class="s-radio" value="0" checked="checked"/>保密</label>
+                                    <label><input name="m_sex" type="radio" class="s-radio" value="1" checked="checked"/>男</label>
+                                    <label><input  type="radio" name="m_sex" value="2" class="s-radio"  />女</label>
+                                    <label><input name="m_sex" type="radio" class="s-radio" value="0"/>保密</label>
                                 </div>
                             </dd>
                             <dd>
                                 <div class="form-tt"><i class="text-required">*</i>验证码：</div>
                                 <div class="form-row">
                                     <div style="padding:3px 0 0 0;*height:30px;overflow:hidden;*zoom:1;">
-                                        <input name="verify" type="text" class="s-txt tips" style="width:70px" id="verCode" title="请输入验证码，不区分大小写"/>
+                                        <input name="verify" type="text" class="s-txt tips" style="width:70px" id="verCode" title="请输入验证码，不区分大小写" validate='{ required:true,remote:"{:U("User/checkVerify")}",messages:{required:"验证码不能为空"}}'/>
                                         <img src="{:U('User/Verify')}" id="verifyimg" class="alM" style="cursor: pointer;"/>
                                     </div>
                                 </div>
