--- a/branches/2.1/Tpl/Admin/Default/Member/index.html
+++ b/branches/2.1/Tpl/Admin/Default/Member/index.html
@@ -1,14 +1,83 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<div class="rounded table" style="width: 98%;">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" class="box_top">
+        <thead class="thead">
+            <tr class="space">
+                <th colspan="10">会员列表</th>
+            </tr>
+        </thead>
+    </table>
+    <div class="contentbox" data-uri='{:U("Admin/Member/doEditStatus")}'>
+        <table width="100%" class="list td_align">
+            <thead>
+                <tr class="thead">
+                    <th class="align-center">编号</th>
+                    <th class="align-center">用户名</th>
+<!--                    <th class="align-center">会员等级</th>-->
+                    <th class="align-center">昵称</th>
+                    <th class="align-center">邮箱</th>
+                    <th class="align-center">头像</th>
+                    <th class="align-center">账户余额</th>
+                    <th class="align-center">性别</th>
+                    <th class="align-center">状态</th>
+                    <th class="align-center">管理操作</th>
+                </tr>
+            </thead>
+            <tbody>
+            <volist name="data" id="list">
+                <tr>
+                    <td class="align-center">{$list.m_id}</td>
+                    <td class="align-center">{$list.m_name}</td>
+                    <!--<td class="align-center">{$list.ml_id}</td>-->
+                    <td class="align-center">{$list.m_nickname}</td>
+                    <td class="align-center">{$list.m_email}</td>
+                    <td class="align-center"><img src="{$list.m_pic|default='__PUBLIC__/Home/images/photo.png'}" title="{$list.m_name}" width="24px" height="24px"/></td>
+                    <td class="align-center">{$list.m_balance|sprintf='%.2f',###}</td>
+                    <td class="align-center">
+                        <switch name="$list.m_sex">
+                            <case value="1">男</case>
+                            <case value="2">女</case>
+                            <default />保密
+                        </switch>
+                    </td>
+                    <td class="align-center">{$list.m_status}</td>
+                    <td class="align-center">
+                        <div class="button-group">
+                            <a href='javascript:void(0);'  class="button danger icon pill edit doadd" m_name="{$list.m_name}" m_id="{$list.m_id}" alt="编辑" title="编辑"></a>
+                            <a href="javascript:void(0);"  data-uri='{:U("Admin/Member/doDelete","m_id=$list[m_id]")}' val="{$list[m_id]}" data-msg="确定要删除 <font color='red'>{$list.m_name}</font> 吗？" data-acttype="ajax" class="button danger icon pill remove dodel" title="删除"></a>
+
+                        </div>
+                    </td>
+                </tr>
+            </volist>
+            <empty name="data">
+                <tr><td colspan="99">暂时没有数据!</td></tr>
+            </empty>
+            </tbody>
+        </table>
+        <div style="clear: both;"></div>
+    </div>
+
+</div>
+<script>
+    $(document).ready(function(){
+        //删除会员
+        $(".dodel").click(function(){
+            var title = $(this).attr("data-msg");
+            var uri = $(this).attr("data-uri");
+            $.dialog.confirm(title, function () {
+                $.ajax({
+                    url:uri,
+                    cache:false,
+                    dataType:'json',
+                    type:'GET',
+                    data:{},
+                    success:function(msgObj){
+                        showMessage(msgObj.status,msgObj.info,"{:U('Admin/Member/index')}");
+                        return false;
+                    }
+                });
+            }, function () {
+            });
+        });
+    });
+</script>
