--- a/Tpl/Home/Default/Index/index.html
+++ b/Tpl/Home/Default/Index/index.html
@@ -11,10 +11,10 @@
     });    
 </script>
 <div class="warp">
-    <div id="top">
+<!--    <div id="top">
         <div class="sep1">这是一个简单小巧实用的CMS网站管理系统</div>
         <div class="sep2">HUICMS懂你所在乎需要的</div>
-    </div>
+    </div>-->
     <div id="banner">
         <div id="slideshow" class="clearfix">
             <div class="slide clearfix">
