--- a/Tpl/Home/Default/User/Register.html
+++ b/Tpl/Home/Default/User/Register.html
@@ -71,7 +71,7 @@
                     <div class="register_right">
                         <div class="rst_login">
                             <span>已经有帐号？请直接登录</span>
-                            <a href="/" class="btn-register">登录</a>
+                            <a href='{:U("User/Login")}' class="btn-register">登录</a>
                         </div>
                         <notempty name="oauth">
                             <div class="other_login">
