--- a/Tpl/Admin/Default/Common/incHeader.html
+++ b/Tpl/Admin/Default/Common/incHeader.html
@@ -39,7 +39,7 @@
         <div class="toolmenu"><span class="bar-btn"></span>
             <ul class="bar-list" style="display: none;">
                 <li><a onclick="openItem(&#39;clear,cache,setting&#39;);" href="javascript:void(0)">更新站点缓存</a></li>
-                <li><a href="http://www.shopnctest.com/huli/" id="iframe_refresh">刷新管理中心</a></li>
+                <li><a href="javascript:void(0);" onclick="window.location.reload();return false;" id="iframe_refresh">刷新管理中心</a></li>
                 <li><a href="JavaScript:void(0);" onclick="openItem(&#39;db,db,website&#39;);">备份恢复数据</a></li>
                 <li><a href="http://www.shopnctest.com/huli/index.php?act=updatestat&op=index" target="workspace">更新信用统计</a></li>
                 <li><a href="http://www.shopnctest.com/huli/" title="管理中心-ShopNC商城" rel="sidebar" onclick="javascript:window.external.AddFavorite(&#39;http://www.shopnctest.com/huli/&#39;, &#39;管理中心-ShopNC商城&#39;);return false;">收藏管理中心</a></li>
