--- a/Tpl/Home/Default/Common/header.html
+++ b/Tpl/Home/Default/Common/header.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                 <else />
-                    <img src="{$Think.session.userinfo.figureurl|default='__PUBLIC__/Home/images/photo.png'}" title="{$Think.session.userinfo.nickname}" width="28" height="28" /><a href="{:U('Home/Oauth/OtherLoginOut')}" style="position: relative;top: -10px;margin-left: 5px;color: #fff;height: 28px;line-height: 28px;vertical-align: middle;">退出</a>
+                    <img src="__PUBLIC__/{$Think.session.userinfo.figureurl|default='__PUBLIC__/Home/images/photo.png'}" title="{$Think.session.userinfo.nickname}" width="28" height="28" /><a href="{:U('Home/Oauth/OtherLoginOut')}" style="position: relative;top: -10px;margin-left: 5px;color: #fff;height: 28px;line-height: 28px;vertical-align: middle;">退出</a>
                 </if>
                 
             </li>
