--- a/Tpl/Home/Default/User/Register.html
+++ b/Tpl/Home/Default/User/Register.html
@@ -3,7 +3,7 @@
         <div class="reg-main">
             <!--注册步骤-->
             <form method="POST" action="{:U('User/doRegister')}" name="" id="" class="formvalidate">
-                <div class="article boxShadow">
+                <div class="article boxShadow" style="height: 480px;">
                     <div class="title">注册帐号</div>
                     <div class="register_left">
                         <dl class="item">
@@ -68,7 +68,7 @@
 
                         </dl>
                     </div>
-                    <div class="register_right">
+                    <div class="register_right" style="height: 405px;">
                         <div class="rst_login">
                             <span>已经有帐号？请直接登录</span>
                             <a href='{:U("User/Login")}' class="btn-register">登录</a>
