--- a/branches/2.1/Tpl/Admin/Default/Setting/index.html
+++ b/branches/2.1/Tpl/Admin/Default/Setting/index.html
@@ -10,6 +10,7 @@
         <ul class="cc">
             <li class="current"><a href="{:U('Admin/Setting/index')}">站点信息</a></li>
             <li><a href="{:U('Admin/Setting/Global')}">全局参数</a></li>
+            <li><a href="{:U('Admin/Setting/verCode')}">验证码配置</a></li>
         </ul>
     </div>
     <form action="{:U('Admin/Setting/doSaveWebsite')}" method="post" class="formvalidate">
