--- a/Tpl/Home/Default/Common/footer.html
+++ b/Tpl/Home/Default/Common/footer.html
@@ -19,6 +19,14 @@
         <p style="margin-top: 5px;">Powered by HuiCms 1.0 </p>
 	</div>
 </footer>
+<!-- Baidu Button BEGIN -->
+<script type="text/javascript" id="bdshare_js" data="type=slide&amp;img=3&amp;pos=left&amp;uid=6725753" ></script>
+<script type="text/javascript" id="bdshell_js"></script>
+<script type="text/javascript">
+var bds_config={"bdTop":166,"snsKey":"{'tsina':'1259336159','tqq':'801344926','t163':'mmAasU40baI36916','tsohu':''}"};
+document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000);
+</script>
+<!-- Baidu Button END -->
 <script>
 (function(a){a.fn.scrollToTop=function(c){var d={speed:800};c&&a.extend(d,{speed:c});return this.each(function(){var b=a(this);a(window).scroll(function(){100<a(this).scrollTop()?b.fadeIn():b.fadeOut()});b.click(function(b){b.preventDefault();a("body, html").animate({scrollTop:0},d.speed)})})}})(jQuery);    
 </script>
