--- a/branches/2.1/Tpl/Home/Default/User/Login.html
+++ b/branches/2.1/Tpl/Home/Default/User/Login.html
@@ -21,6 +21,7 @@
                                     </div>
                                 </div>
                             </dd>
+                            <if condition="$code.RELOGIN eq '1'">
                             <dd>
                                 <div class="form-tt"><i class="text-required">*</i>验证码：</div>
                                 <div class="form-row">
@@ -30,6 +31,7 @@
                                     </div>
                                 </div>
                             </dd>
+                            </if>
                             <dd class="mt15">
                                 <div class="form-tt"></div>
                                 <div class="form-row actionBtn">
