--- a/branches/2.1/Tpl/Home/Default/User/Register.html
+++ b/branches/2.1/Tpl/Home/Default/User/Register.html
@@ -49,15 +49,17 @@
                                     <label><input name="m_sex" type="radio" class="s-radio" value="0"/>保密</label>
                                 </div>
                             </dd>
-                            <dd>
-                                <div class="form-tt"><i class="text-required">*</i>验证码：</div>
-                                <div class="form-row">
-                                    <div style="padding:3px 0 0 0;*height:30px;overflow:hidden;*zoom:1;">
-                                        <input name="verify" type="text" class="s-txt tips" style="width:70px" id="verCode" title="请输入验证码，不区分大小写" validate='{ required:true,remote:"{:U("User/checkVerify")}",messages:{required:"验证码不能为空"}}'/>
-                                        <img src="{:U('User/Verify')}" id="verifyimg" class="alM" style="cursor: pointer;" title="看不清楚?点击换张"/>
+                            <if condition="$code.MREGISTER eq '1'">
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>验证码：</div>
+                                    <div class="form-row">
+                                        <div style="padding:3px 0 0 0;*height:30px;overflow:hidden;*zoom:1;">
+                                            <input name="verify" type="text" class="s-txt tips" style="width:70px" id="verCode" title="请输入验证码，不区分大小写" validate='{ required:true,remote:"{:U("User/checkVerify")}",messages:{required:"验证码不能为空"}}'/>
+                                            <img src="{:U('User/Verify')}" id="verifyimg" class="alM" style="cursor: pointer;" title="看不清楚?点击换张"/>
+                                        </div>
                                     </div>
-                                </div>
-                            </dd>
+                                </dd>
+                            </if>
                             <dd class="mt15">
                                 <div class="form-tt"></div>
                                 <div class="form-row actionBtn">
