--- a/Tpl/Admin/Default/RoleNav/editRoleNav.html
+++ b/Tpl/Admin/Default/RoleNav/editRoleNav.html
@@ -37,7 +37,7 @@
                     </td>
                     <td width="80"></td>
                     <td>
-                        <input type="reset" id="reset" class="submit reset" value="重置">
+                        <input type="reset" id="reset" class="btn reset" value="重置">
                     </td>
                 </tr>
             </table>		
