--- a/Tpl/Admin/Default/Common/jump.html
+++ b/Tpl/Admin/Default/Common/jump.html
@@ -1,28 +1,46 @@
 {__NOLAYOUT__}
 <style type="text/css">
-    .system-message{ padding: 24px 48px; font-family: '微软雅黑'; color: #333; font-size: 16px; }
-    .system-message h1{ font-size: 100px; font-weight: normal; line-height: 120px; margin-bottom: 12px; }
-    .system-message .jump{ padding-top: 10px}
-    .system-message .jump a{ color: #333;}
-    .system-message .success,.system-message .error{ line-height: 1.8em; font-size: 36px }
-    .system-message .detail{ font-size: 12px; line-height: 20px; margin-top: 12px; display:none}
+    .alert{background-color:#f1f1f1; width:495px;margin:50px auto; font-size:12px; line-height:24px;}
+    .alert .alert_body{ border:1px solid #cbcbcb;background-color:#fff; width:475px; height:143px; position:relative; top:-5px; left:-5px; padding:10px;}
+    .alert .alert_body h3{font-size:14px; font-weight:bold; margin:0;}
+    .alert .alert_body .alertcont{margin:15px 0 0 85px; padding:5px 50px; line-height:30px; color:#666; min-height:30px; _height:30px;}
+    .alert .alert_body .alertcont a{color:#000; text-decoration:none;}
+    .alert .alert_body .alertcont span{font-size:12px; font-weight:bold; color:#000;}
+    .alert .alert_body .btn{text-align:center; padding-top:0px;}
+    .alert .alert_body .btn img{border:0;}
+    .alert .alert_body .success{ background:url('__PUBLIC__/images/success.gif') left center no-repeat; }
+    .alert .alert_body .error{ background:url('__PUBLIC__/images/error.gif') left center no-repeat; }
+    
+    .message{display:block;position:absolute;top:0;left:30%;
+             left:50%;/*FF IE7*/
+             top: 50%;/*FF IE7*/
+             margin-left:-240px!important;/*FF IE7 该值为本身宽的一半 */
+             margin-top:-70px!important;/*FF IE7 该值为本身高的一半*/
+             margin-top:0;
+             position:fixed!important;/*FF IE7*/
+             position:absolute;/*IE6*/
+             _top:       expression(eval(document.compatMode &&
+                 document.compatMode=='CSS1Compat') ?
+                 documentElement.scrollTop + (document.documentElement.clientHeight-this.offsetHeight)/2 :/*IE6*/
+                 document.body.scrollTop + (document.body.clientHeight - this.clientHeight)/2);/*IE5 IE5.5*/}
+    .message .alert_body{ padding:0; height:163px; width:495px; border:1px solid #cae3eb;}
+    .message .alert_body h3{background-color:#e9f4f7; padding:3px 15px;}
 </style>
 
-<div class="contentRightBox">
-    <div class="system-message">
+<div class="alert message">
+    <div class="alert_body">
+        <h3>系统提示</h3>
         <present name="message">
-            <h1 style="font-family: '微软雅黑';">:)</h1>
-            <p class="success" id="successMsg"><?php echo($message); ?></p>
+            <p class="alertcont success" id="successMsg">
+            <span><a href="<?php echo($jumpUrl); ?>"><?php echo($message); ?></a></span>
+            </p>
             <else/>
-            <h1 style="font-family: '微软雅黑';">:(</h1>
-            <p class="error" id="errorMsg"><?php echo($error); ?></p>
+            <p class="alertcont error" id="errorMsg">
+            <span><a href="<?php echo($jumpUrl); ?>"><?php echo($error); ?></a></span>
+            </p>
         </present>
-        <p class="detail"></p>
-        <p class="jump">
-            页面自动 <a id="href" href="<?php echo($jumpUrl); ?>">跳转</a> 等待时间： <b id="wait"><?php echo($waitSecond); ?></b>
-        </p>
+        <p class="btn">系统会在<b id="wait"><?php echo($waitSecond); ?></b>秒内自动跳转，如没有响应，<a id="href" href="<?php echo($jumpUrl); ?>">如果没有自动跳转请点击!</a></p>
     </div>
-    <div style="width: 1px; height: 1px; overflow: hidden; visibility: hidden; clear: both;" id="reader"></div>
 </div>
 
 <script type="text/javascript">
