--- a/Tpl/Home/Default/Common/header.html
+++ b/Tpl/Home/Default/Common/header.html
@@ -58,7 +58,11 @@
             <strong>最新消息：</strong>网站正在开发中...
         </div>
 	</div>
-    <div style="float: right;position: relative;top: -20px;left: -8px;">
+    <div style="float: right;position: relative;top: -20px;left: -165px;">
+        <wb:follow-button uid="1884369172" type="red_2" width="136" height="24" ></wb:follow-button>
+       
+    </div>
+    <div style="float: right;position: relative;top: -20px;left: -115px;">        
         <iframe src="http://follow.v.t.qq.com/index.php?c=follow&a=quick&name=php200&style=5&t=1369761250151&f=1" frameborder="0" scrolling="auto" width="178" height="24" marginwidth="0" marginheight="0" allowtransparency="true"></iframe>
     </div>
 </div>
