--- a/Tpl/Admin/Default/Common/incTop.html
+++ b/Tpl/Admin/Default/Common/incTop.html
@@ -13,5 +13,8 @@
     <script src="__PUBLIC__/Lib/validate/jquery.validate.1.9.js"></script>
     <script src="__PUBLIC__/Lib/validate/jquery.metadata.js"></script>
     <script src="__PUBLIC__/Lib/validate/messages_cn.js"></script>
+    <link href="__PUBLIC__/Lib/datepicker/css/datetimepicker.css" rel="stylesheet" type="text/css" id="cssfile">
+    <script src="__PUBLIC__/Lib/datepicker/js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/Lib/datepicker/js/bootstrap-datetimepicker.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Admin/js/global.js"></script>
 </head>
