--- a/Tpl/Admin/Default/Common/incBreadcrumb.html
+++ b/Tpl/Admin/Default/Common/incBreadcrumb.html
@@ -1,10 +1,12 @@
 <!--面包屑导航-->
 <div id="crumbs" class="crumbs">
     <span><a href='{:U("Admin/Index/index")}' title="控制台">控制台</a></span>
-    <span class="arrow">&nbsp;</span>
-    <span><a href='javascript:void(0);' title="{$breadcrumbs.name}">{$breadcrumbs.name}</a></span>
-    <span class="arrow">&nbsp;</span>
-    <span><a href='{:U("Admin/$breadcrumbs[url]/index")}' title="{$breadcrumbs.module}">{$breadcrumbs.module_name}</a></span>
-    <span class="arrow">&nbsp;</span>
-    <span>{$breadcrumbs.action_name}</span>
+    <if condition="$breadcrumbs.name neq ''">
+        <span class="arrow">&nbsp;</span>
+        <span><a href='javascript:void(0);' title="{$breadcrumbs.name}">{$breadcrumbs.name}</a></span>
+        <span class="arrow">&nbsp;</span>
+        <span><a href='{:U("Admin/$breadcrumbs[url]/index")}' title="{$breadcrumbs.module}">{$breadcrumbs.module_name}</a></span>
+        <span class="arrow">&nbsp;</span>
+        <span>{$breadcrumbs.action_name}</span>
+    </if>
 </div>
