--- a/Tpl/Admin/Default/Common/jump.html
+++ b/Tpl/Admin/Default/Common/jump.html
@@ -39,7 +39,7 @@
             <span><a href="<?php echo($jumpUrl); ?>"><?php echo($error); ?></a></span>
             </p>
         </present>
-        <p class="btn">系统会在<b id="wait"><?php echo($waitSecond); ?></b>秒内自动跳转，如没有响应，<a id="href" href="<?php echo($jumpUrl); ?>">如果没有自动跳转请点击!</a></p>
+        <p class="btn">系统会在<b id="wait"><?php echo($waitSecond); ?></b>秒内自动跳转，如没有响应<a id="href" href="<?php echo($jumpUrl); ?>">请点击!</a></p>
     </div>
 </div>
 
