--- a/Tpl/Home/Default/Common/footer.html
+++ b/Tpl/Home/Default/Common/footer.html
@@ -12,28 +12,11 @@
         </div>
     </div>
 </notempty>
-<!--<div class="footer">
-	<div class="copyright"> © 2013 PHPMyWind.COM All Rights Reserved. 黑ICP备1200103-1号 
-		 Baidu Button BEGIN 
-		<div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare"> <a class="bds_tsina" title="分享到新浪微博" href="#"></a> <a class="bds_tqq" title="分享到腾讯微博" href="#"></a> <a class="bds_hi" title="分享到百度空间" href="#"></a> <a class="bds_qzone" title="分享到QQ空间" href="#"></a> <a class="bds_tqf" title="分享到腾讯朋友" href="#"></a> <a class="bds_renren" title="分享到人人网" href="#"></a><span class="bds_more"></span> <a class="shareCount" href="#" title="累计分享0次">0</a> </div>
-		<script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=2431752" src="http://bdimg.share.baidu.com/static/js/bds_s_v2.js?cdnversion=381251"></script> 
-		 
-		<script type="text/javascript">
-		document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000)
-		</script> 
-		 Baidu Button END  
-		<script type="text/javascript">
-		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-		document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3dc3e4e3b1ee2da3d468cb3734b1da4a' type='text/javascript'%3E%3C/script%3E"));
-		</script><script src=" http://hm.baidu.com/h.js?3dc3e4e3b1ee2da3d468cb3734b1da4a" type="text/javascript"></script> 
+<div class="footer" <empty name="links">style="margin-top:20px;"</empty>>
+	<div class="copyright"> © 2013-2020 HuiCMS.CN All Rights Reserved. {$site_icp}
+		<!-- Baidu Button BEGIN -->
 	</div>
-</div>-->
-<footer class="indexFooter"<empty name="links">style="margin-top:20px;"</empty>>
-	<div class="wrap clearfix">
-        <p>版权所有©<span class="ffa">2013-2020</span>&nbsp;&nbsp;HuiCms&nbsp;&nbsp;<span class="ffa">{$site_icp}</span></p>
-        <p style="margin-top: 5px;">Powered by HuiCms 1.0 </p>
-	</div>
-</footer>
+</div>
 <!-- Baidu Button BEGIN -->
 <script type="text/javascript" id="bdshare_js" data="type=slide&amp;img=3&amp;pos=left&amp;uid=6725753" ></script>
 <script type="text/javascript" id="bdshell_js"></script>
